--- a/Example 2 - Demo/my.kv
+++ b/Example 2 - Demo/my.kv
@@ -53,7 +53,7 @@
 							on_active: root.halftone(self.active)
 						# A label is a textbox widget that is read-only, used as titles for other widgets or elements
 						Label:
-							text: 'Halftone'
+							text: 'Halftone' # Checkboxes and sliders are followed by their labels as they cannot be labeled directly
 						CheckBox:
 							id: solarize
 							height: '48dp'
